[package]
name = "docconfig_derive"
version = "0.1.0"
edition = "2021"
authors = [ "Yuxuan Shui <yshuiv7@gmail.com>" ]
description = "Generate sample config file from structs"

[lib]
proc-macro = true

[dependencies]
thiserror = "1.0.30"
syn = { version = "1.0.81", features = ["extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.32"
serde_derive_internals = "0.26.0"
